# chatty

./: .chatty.default.toml  .gitignore  Cargo.toml  Makefile  README.md  prepare_release.sh
.github/workflows/: ci.yaml  release.yaml
app/: Cargo.toml
app/src/: action.rs  app.rs  app_state.rs  bubble.rs  bubble_list.rs  clipboard.rs  code_blocks.rs  instructions.rs  lib.rs  textarea.rs
app/src/services/: action.rs  clipboard.rs  events.rs
app/src/ui/: bubble.rs  bubble_list.rs  edit.rs  help.rs  helpers.rs  history.rs  loading.rs  mod.rs  models.rs  notice.rs  question.rs  rename.rs  scroll.rs  syntaxes.rs  textarea.rs
backend/: Cargo.toml
backend/src/: compressor.rs  compressor_test.rs  convo_compressor.rs  convo_compressor_test.rs  gemini.rs  gemini_test.rs  lib.rs  manager.rs  manager_test.rs  openai.rs  openai_test.rs
backend/testdata/: gemini_response.json
cli/: Cargo.toml
cli/src/: cli.rs  configuration.rs  lib.rs  main.rs
cli/testdata/: config.toml
models/: Cargo.toml
models/src/: backend.rs  configuration.rs  constants.rs  conversation.rs  conversation_test.rs  event.rs  lib.rs  message.rs  storage.rs
src/: cli.rs  lib.rs  main.rs
src/app/: app.rs  app_state.rs  clipboard.rs  event_publisher.rs  initializer.rs  initializer_test.rs  mod.rs
src/app/services/: action.rs  clipboard.rs  crossterm_stream.rs  events.rs  mod.rs
src/app/ui/: bubble.rs  bubble_list.rs  edit.rs  help.rs  helpers.rs  history.rs  input_box.rs  mod.rs  models.rs  notice.rs  question.rs  rename.rs  selection.rs  selection_test.rs  selections.rs  syntaxes.rs  utils.rs  utils_test.rs
src/backend/: compressor.rs  compressor_test.rs  gemini.rs  gemini_test.rs  manager.rs  manager_test.rs  mod.rs  openai.rs  openai_test.rs  utils.rs  utils_test.rs
src/backend/mcp/: binary_transport.rs  binary_transport_test.rs  client.rs  client_test.rs  manager.rs  manager_test.rs  mod.rs  models.rs
src/backend/mcp/transport/: binary.rs  binary_test.rs
src/cli/: cli.rs  config.rs  config_test.rs  mod.rs
src/config/: constants.rs  defaults.rs  mod.rs  model_filter.rs  model_filter_test.rs  models.rs  utils.rs  utils_test.rs
src/context/: compressor.rs  compressor_test.rs  mod.rs
src/models/: action.rs  backend.rs  configuration.rs  conversation.rs  conversation_test.rs  event.rs  mcp.rs  mod.rs  notice.rs  storage.rs  task.rs
src/storage/: mod.rs
src/storage/sqlite/: migration.rs  mod.rs  mod_test.rs  sqlite.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/sqlite/: migration.rs  mod.rs  sqlite.rs  sqlite_test.rs
testdata/: config.toml  config_with_default.toml  gemini_response.json
