[workspace]
resolver = "2"
members = ["app", "backend", "cli", "models", "storage"]

default-members = ["cli"]

[workspace.dependencies]
crossterm = { version = "0.28.1", features = [
    "bracketed-paste",
    "event-stream",
] }
eyre = { version = "0.6" }
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
syntect = { version = "5.2.0", features = ["default-fancy"] }
once_cell = "1.20.3"
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
tui-textarea = { version = "0.7.0", features = ["crossterm", "ratatui"] }
futures = "0.3.31"
arboard = "3.4.1"
async-trait = "0.1.87"
reqwest = { version = "0.12.12", features = [
    "stream",
    "json",
    "gzip",
    "rustls-tls-native-roots",
] }
thiserror = "2.0.12"
tokio-util = "0.7.13"
log = "0.4.26"
env_logger = "0.11.6"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
toml = "0.8.20"
unicode-width = "0.2.0"
uuid = { version = "1.15.1", features = ["v4"] }
