[package]
name = "openai-app"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui.workspace = true
ratatui-macros.workspace = true
crossterm.workspace = true
eyre.workspace = true
syntect.workspace = true
once_cell.workspace = true
tokio.workspace = true
tui-textarea.workspace = true
futures.workspace = true
arboard.workspace = true
log.workspace = true
unicode-width.workspace = true
chrono.workspace = true
tokio-util.workspace = true

openai-backend = { path = "../backend" }
openai-storage = { path = "../storage" }
openai-models = { path = "../models" }
