[package]
name = "openai-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true

async-trait.workspace = true
eyre.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio-util.workspace = true
openai-models = { path = "../models" }
