[package]
name = "chatty"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
toml.workspace = true
clap.workspace = true
syntect.workspace = true
better-panic.workspace = true
tokio-util.workspace = true

chatty-app = { path = "../app" }
chatty-backend = { path = "../backend" }
chatty-storage = { path = "../storage" }
chatty-models = { path = "../models" }

[dev-dependencies]
mockito.workspace = true
