[package]
name = "chatty-models"
version = "0.1.0"
edition = "2024"

[dependencies]
tui-textarea.workspace = true
chrono.workspace = true
serde.workspace = true
ratatui.workspace = true
uuid.workspace = true
log.workspace = true
async-trait.workspace = true
eyre.workspace = true
tokio.workspace = true
