[package]
name = "chatty-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
eyre.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
chrono.workspace = true
tokio-rusqlite.workspace = true

chatty-models = { path = "../models" }
